# Ai-roxy

./: .gitignore  README.md  cuda工具下载地址.txt  init.bat  init_gpu.bat  install_uv.bat  run.bat  use_trt.bat
app/: api.md  config.json  main.py  pt_to_eng.py  pt_to_trt.py  pyproject.toml
app/dep/: tensorrt-10.0.0b6-py2.py3-none-win_amd64.whl
app/fe/: index.html
app/fe/assets/: clientSettings-B0RG5bmB.css  clientSettings-DeVN0aXJ.js  elementPlus-DS9hsnWV.js  index-DKPS2KHI.js  index-aDn7YFbu.css  mainSettings-CllRUegz.css  mainSettings-kdREOqSc.js  modelSettings-CgdNtz51.css  modelSettings-DuRVY8Rj.js  movementSettings-CPbSxBU0.css  movementSettings-EUPbOzWB.js  vendor-bvqfP1Qu.js
app/models/: yolo12n.cache
app/module/: config.py  display.py  dpi.py  inference.py  input_listener.py  ipc.py  mouse_control.py  process_manager.py  screenshot.py  server.py  shared_memory.py
