[project]
name = "fb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "mss",
    "numpy",
    "opencv-python",
    "pywin32",
    "uvicorn",
    "pynput",
    "pywebview",
    "ultralytics"
]

[tool.uv.sources]
tensorrt = { path = "dep/tensorrt-10.0.0b6-py2.py3-none-win_amd64.whl" }
